# masna3

./: .gitignore  CHANGELOG.md  Makefile  README.md  cabal.project  masna3.cabal
src/Masna3/Backend/: Redis.hs
src/Masna3/Backend/Redis/: Config.hs  Consumer.hs
