cabal-version:      3.14
name:               masna3
version:            0.1.0.0
-- synopsis:
-- description:
license:            LGPL-3.0-only
license-file:       LICENSE
author:             Théophile Choutri de Tarlé
maintainer:         theophile+github@choutri.eu
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- cabal-gild: discover src
    exposed-modules:  MyLib
    build-depends:    
        base >= 4.20.1 && < 4.21,
    hs-source-dirs:   src
    default-language: GHC2024
